syntax = "proto3";
package productsapi;
option go_package = "github.com/NStegura/saga/orders/api";

import "google/protobuf/empty.proto";


service OrdersApi {

  rpc CreateOrder(OrderIn) returns (OrderId) {}
  rpc GetOrder(OrderId) returns (OrderOut) {}
  rpc GetOrders(UserId) returns (Orders) {}
  rpc GetPing(google.protobuf.Empty) returns (Pong) {}
}

message OrderProduct {
  int64 product_id = 1;
  int64 count = 2;
}

message OrderIn {
  repeated OrderProduct order_products = 1;
  int64  user_id = 2;
  string description = 3;
}

message OrderOut {
  int64 order_id = 1;
  repeated OrderProduct order_products = 2;
  string description = 3;
  string state = 4;
}

message Orders {
  repeated OrderInfoOut orders = 1;
}

message OrderInfoOut {
  int64 order_id = 1;
  string description = 2;
  string state = 3;
}

message OrderId {
  int64 order_id = 1;
}

message UserId {
  int64 user_id = 1;
}

message Pong {
  bool pong = 1;
}
